Added styling to the signup and login pages

--- a/root/frontend/assets/styles/home.css
+++ b/root/frontend/assets/styles/home.css
@@ -83,7 +83,7 @@
 
 .hero-button {
     padding: 10px 40px;
-    background-color: #000;
+    background-color: #0e87cc;
     color: #fff;
     text-align: center;
     font-size: 16px;
