Adjusted the padding of the business listing table

--- a/root/frontend/assets/styles/common.css
+++ b/root/frontend/assets/styles/common.css
@@ -139,7 +139,8 @@
 #entries td, #entries th{
     border: 1px solid #ddd;
     padding: 10px;
-    padding-left: 50px;
+    padding-left: 40px;
+    padding-right: 35px;
 }
 
 #entries tr:nth-child(even){
