--- a/root/frontend/assets/styles/common.css
+++ b/root/frontend/assets/styles/common.css
@@ -175,3 +175,64 @@
     font-size: 45px;
     cursor: pointer;
 }
+
+.pop-overlay {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+}
+
+.popup {
+    background-color: #fff;
+    padding: 20px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    margin-top: 5%;
+    margin-left: 25%;
+    width: 50%;
+}
+
+.content {
+    text-align: center;
+    display: block;
+}
+
+.popup .close {
+    position: absolute;
+    font-size: 40px;
+    color: #0d3e82;
+    cursor: pointer;
+    right: 25%;
+}
+
+.popup .input-fields {
+    margin-bottom: 0;
+    text-align: justify;
+    padding-left: 120px;
+}
+
+.popup input {
+    width: 70%;
+    border: 1px solid #000;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 18px;
+}
+
+.popup button {
+    background-color: #0d3e82;
+    display: block;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-size: 20px;
+    cursor: pointer;
+    width: 50%;
+    margin:20px 0 40px 25%;
+}
