--- a/root/public/css/common.css
+++ b/root/public/css/common.css
@@ -159,6 +159,22 @@
   color: #fff;
 }
 
+.output-message {
+    right: 50%;
+}
+
+#edit button {
+    background-color: none;
+    color: #0f0;
+    border: none;
+}
+
+#delete button {
+    background-color: none;
+    color: #f00;
+    border: none;
+}
+
 .add-new button {
     background-color: #ff4500;
     width: 80px;
@@ -241,7 +257,7 @@
     padding: 10px 30px;
     width: auto;
     margin-left: 35px;
-    margin-top: 400px;
+    margin-top: 350px;
     background-color: #ff4500;
     border: none;
     border-radius: 10px;
