--- a/root/public/css/common.css
+++ b/root/public/css/common.css
@@ -163,18 +163,6 @@
     right: 50%;
 }
 
-#edit button {
-    background-color: none;
-    color: #0f0;
-    border: none;
-}
-
-#delete button {
-    background-color: none;
-    color: #f00;
-    border: none;
-}
-
 .add-new button {
     background-color: #ff4500;
     width: 80px;
@@ -229,7 +217,7 @@
 .popup .input-fields {
     margin-bottom: 0;
     text-align: justify;
-    padding-left: 120px;
+    padding-left: 122px;
 }
 
 .popup input {
@@ -237,7 +225,15 @@
     border: 1px solid #000;
     border-radius: 5px;
     padding: 10px;
-    font-size: 18px;
+    font-size: 16px;
+}
+
+.popup select {
+    width: 70%;
+    border: 1px solid #000;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
 }
 
 .popup button {
